# diffkt

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL_MAC.md  INSTALL_UBUNTU.md  README.md  diffkt-ubuntu-install-build-notes.txt
.github/workflows/: config.yml  tagged-release.yml
cpp/gpuops/: .gitignore  CMakeLists.txt  README.md  build.sh  example-app.cpp  ops_jni.cpp  ops_jni.h
cpp/ops/: .gitignore  CMakeLists.txt  CMakeLists.txt.in  DnnlOps.cpp  DnnlOps.h  README.md  SparseOps.cpp  SparseOps.h  ops_helper.cpp  ops_helper.h
cpp/ops/Dnnl/: ArithmeticDnnl.cpp  ArithmeticDnnl.h  BatchNorm.cpp  BatchNorm.h  CMakeLists.txt  Conv.cpp  Conv.h  LogSoftmax.cpp  LogSoftmax.h  Pooling.cpp  Pooling.h  Reduce.cpp  Reduce.h  Relu.cpp  Relu.h  Utils.cpp  Utils.h
cpp/ops/Math/: CMakeLists.txt  math.cpp  math.h  util.cpp  util.h
cpp/ops/Predicate/: CMakeLists.txt  ifThenElse.cpp  ifThenElse.h
cpp/ops/Sparse/: Arithmetic.h  ArithmeticEigen.cpp  ArithmeticMKL.cpp  ArithmeticOMP.cpp  ArithmeticUtils.cpp  ArithmeticUtils.h  CMakeLists.txt  COO.h  CSR.cpp  CSR.h  DebugUtils.h  JavaClassStr.h  MKLCSR.cpp  MKLCSR.h  MemUtils.h  SpMat.cpp  SpMat.h  SparseFloatTensor.cpp  SparseFloatTensor.h  Utils.cpp  Utils.h
cpp/ops/scripts/: build.sh  format.sh
cpp/ops/test/: ArithmeticDnnlTest.cpp  BatchNormTest.cpp  CMakeLists.txt  ConvTest.cpp  LogSoftmaxTest.cpp  PoolingTest.cpp  ReduceTest.cpp  ReluTest.cpp  SparseArithmeticPerfTest.cpp  SparseArithmeticTest.cpp  SparseTestUtils.cpp  SparseTestUtils.h  TestUtils.h
docs/: 404.html  CNAME  index.html  sitemap.xml
docs/api/: index.html  navigation.html
docs/api/api/: package-list
docs/api/api/org.diffkt/: abs.html  all-axes.html  atan.html  base-primal.html  broadcast-all.html  broadcast-to-shape.html  combine-hash.html  compare-to.html  concat.html  conv2d.html  cos.html  cross-entropy-loss-from-one-hot.html  cross-entropy-loss.html  digamma.html  div.html  embedding.html  eq.html  exp.html  expand-to-tangent.html  expand.html  flatten.html  flip.html  forward-derivative.html  forward-derivative1.html  forward-derivative2.html  forward-derivative3.html  forward-derivative4.html  forward-diff.html  gather.html  ge.html  (+71 more)
docs/api/api/org.diffkt.adOptimize/: index.html
docs/api/api/org.diffkt.external/: index.html
docs/api/api/org.diffkt.forward/: index.html
docs/api/api/org.diffkt.gpu/: index.html
docs/api/api/org.diffkt.model/: -b-a-t-c-h-n-o-r-m_-e-p-s-i-l-o-n.html  avg-pool-grad.html  avg-pool.html  batch-norm-train-v1.html  batch-norm-train-v2.html  batch-norm.html  freeze-batch-norm.html  index.html  into.html  max-pool.html  momentum-updated.html
docs/api/api/org.diffkt.random/: cauchy.html  chi-square.html  gamma-with-rate.html  gamma-with-scale.html  gamma.html  gaussian.html  index.html
docs/api/api/org.diffkt.reverse/: index.html
docs/api/api/org.diffkt.tracing/: dedag.html  eval.html  index.html  jit.html  printed-form.html  raw-printed-form.html  simplify.html  topological-sort.html  use-counts.html
docs/api/scripts/: pages.json
docs/assets/css/: styles.64649e1e.css  styles.6513c667.css  styles.da00ee78.css
docs/assets/js/: 073d662e.0d9d13ac.js  08014e35.1b510d20.js  0e384e19.700b7786.js  0e384e19.7aacd23d.js  0fa9eafc.7d3f2dff.js  17896441.80d86950.js  17896441.f3634ea8.js  1d2d2fa2.0326131c.js  1d2d2fa2.c573a5ed.js  1d2d2fa2.d7662d86.js  1f391b9e.3eadef3d.js  1f391b9e.79ac44b0.js  2020d5bf.1a56045c.js  2020d5bf.725ca79b.js  2020d5bf.cc6a97dc.js  2020d5bf.eae4c190.js  2766020f.1ca88c83.js  2766020f.47ab9cf7.js  2983.c614929f.js  2bd938c2.c582c5b2.js  2d180624.40dd007f.js  2d180624.ff694b65.js  2e0edc8c.0555cf07.js  2e0edc8c.7f2d31c1.js  30f5220c.7e7ffd0f.js  30f5220c.d8c9aa46.js  30f5220c.ed3fceb8.js  3548.b948dca9.js  393be207.36f7b98c.js  40e11398.8cd22df4.js  40e11398.8fc07226.js  43d31ea9.4bc1cb21.js  4817f7c0.332d8739.js  4817f7c0.606602ee.js  4b122184.47e06b5d.js  4b122184.64267a49.js  4b122184.c9c0ffc7.js  4b9a9e38.38168f04.js  4b9a9e38.4c6aefab.js  4dd915f9.67e64ecf.js  (+207 more)
docs/blog/: atom.xml  index.html  rss.xml
docs/blog/archive/: index.html
docs/blog/first-blog-post/: index.html
docs/blog/long-blog-post/: index.html
docs/blog/mdx-blog-post/: index.html
docs/blog/tags/: index.html
docs/blog/welcome/: index.html
docs/docs/intro/: index.html
docs/markdown-page/: index.html
kotlin/: .gitignore  README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
kotlin/api/: build.gradle.kts  pom.xml
kotlin/data/: build.gradle.kts
kotlin/examples/: build.gradle.kts
kotlin/gradle/wrapper/: gradle-wrapper.properties
kotlin/scripts/: set_env_vars.sh
kotlin/testutils/: build.gradle.kts
python/utilities/testCasesGen/: README.md  addsubtimes.py  cootocsr.py  inverse.py  matdiv.py  matmul.py  matmul3d.py  sparseFloatTensorInvoke2D.py  testall.py  transpose.py  utils.py
tutorials/: 3d_nonlinear_regression.ipynb  broadcasting.ipynb  environment.yml  exponential_distribution_mle_gradient_descent.ipynb  indexing.ipynb  intro_to_differentiable_programming.ipynb  linear_regression_gradient_descent.ipynb  linear_regression_user_defined_types.ipynb  logistic_regression_gradient_descent.ipynb  mass_spring_jit.ipynb  model.ipynb  multivariable_linear_regression_gradient_descent.ipynb  neural_network_sgd.ipynb  neural_network_user_defined_types.ipynb  normal_mle_gradient_descent.ipynb  run-tutorials-notes.txt  simple_parabola_gradient_descent.ipynb  tensor-slicing.ipynb  user_defined_types.ipynb
tutorials/resources/: LPUPIctltW.py  MLPgNgVTsy.py  ZEKHazQuWs.py  ZhsZtuABdv.py  complex_mass_spring.odg  diffkt_neural_network_sgd.kt  linear_regression_loss_plot3d.py  linear_regression_user_defined_types.kt  logistic_regression_loss_plot3d.py  multivariable_linear_regression.kt  normal_mle_gradient_descent.kt  normal_mle_gradient_descent_likelihood_plot3d.py  simple_mass_spring.odg
website/: README.md  docusaurus.config.js  package-lock.json  package.json  publish.sh  sidebars.js
website/docs/: intro.md
website/docs/contribute/: contribute.md
website/src/pages/: index.js
(+2048 files in other folders)
